# DevilMayCry3-mods

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_hd.bat
config/: dmc3_mod_2006.ini  dmc3_mod_hd.ini
core/: core.cpp  core.h
targets/2006/: injector.cpp  mod.cpp
targets/hd/: mod.cpp  proxy.cpp
